test/fail/vt_match02.v3
//@execute 0=11; 1=22; 2=33; 3=44; 4=42
type T {
	case A;
	case B;
	case C;
	case D;
}
def main(a: int) -> int {
	if (a == 0) return size(T.A);
	if (a == 1) return size(T.B);
	if (a == 2) return size(T.C);
	if (a == 3) return size(T.D);
	return 42;
}
def size(v: T) -> int {
	match (v) {
		A: return 11;
		B: return 22;
		C: return 33;
		D: return 44;
	}
	return -1;
}
